[project]
name = "nird"
version = "0.1.1"
authors = [
    { name = "Tom Russell", email = "tom.russell@ouce.ox.ac.uk" },
    { name = "Raghav Pant", email = "raghav.pant@ouce.ox.ac.uk" },
    { name = "Yue Li", email = "yue.li@ouce.ox.ac.uk" },
]
description = "National Infrastructure Resilience Demonstrator"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
    "pandas-stubs",
    "pre-commit",
    "pytest",
    "pytest-cov"
]
docs = ["sphinx", "m2r2"]

[project.urls]
"Homepage" = "https://github.com/nismod/DAFNI-NIRD"
"Bug Tracker" = "https://github.com/nismod/DAFNI-NIRD/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 120

[tool.mypy]
exclude = ['venv', '.venv', 'build', 'docs']

[[tool.mypy.overrides]]
module = [
    "geopandas",
    "igraph",
    "networkx",
    "scipy.*",
    "shapely.*",
    "skmob.*",
    "snkit"
]
ignore_missing_imports = true
